# clique

./: Cargo.toml  README.md
WFA2-lib/tools/align_benchmark/gap_affine2p/: affine2p_matrix.h
python_package/: pyproject.toml
python_package/clique/: callers.py  cell.py  read_simulation.py  tenX.py  views.py
python_package/tests/: test_callers.py  test_cell.py  test_tenX.py  test_views.py
rust_cmd/: Cargo.toml  build.rs  readme.md
rust_cmd/mouse_lineage_test/: maryam_fwd_both.yaml
rust_cmd/src/: alignment_functions.rs  alignment_manager.rs  collapse.rs  extractor.rs  fasta_comparisons.rs  linked_alignment.rs  main.rs  merger.rs  sequence_lookup.rs  sorter.rs  temp_compare
rust_cmd/src/alignment/: alignment_matrix.rs  fasta_bit_encoding.rs  scoring_functions.rs
rust_cmd/src/calling/: bam_file_to_cell_list.rs  call_events.rs
rust_cmd/src/consensus/: consensus_builders.rs  stretcher.rs  test
rust_cmd/src/python_interface/: bam_file_to_cell_list.rs
rust_cmd/src/read_strategies/: read_disk_sorter.rs  read_set.rs  sequence_layout.rs
rust_cmd/src/reference/: fasta_reference.rs
rust_cmd/src/starcode/: main_starcode.rs  starcode.rs  trie.rs
rust_cmd/src/umis/: bronkerbosch.rs  correct_tags.rs  degenerate_ml.rs  degenerate_tags.rs  known_list.rs  sequence_clustering.rs  starcode_tree.rs  vp_collapse.rs
rust_cmd/src/utils/: base_utils.rs  read_utils.rs
rust_cmd/test_data/: 100K-february-2018.txt  18guide1_pcr_sequence.fasta  just_sequences_500.txt  subset_barcode_list_500.txt  test_best_alignment.fasta  test_layout.yaml  test_ref_alignment.fasta  two_references.fa  two_references_just_one.fa
src/: Extractor.rs  alignment_actor.rs  alignment_functions.rs  bronkerbosch.rs  extractor.rs  fasta_comparisons.rs  knownlist.rs  linked_alignment.rs  main.rs  merger.rs  sequence_lookup.rs  sequenceclustering.rs  sequencelayout.rs
src/alignment/: alignment_matrix.rs  fasta_bit_encoding.rs  fasta_comparisons.rs  mod.rs  scoring_functions.rs
src/consensus/: consensus_builders.rs  consensus_manager.rs  shard_sorting.rs
src/read_strategies/: read_disk_sorter.rs  read_set.rs  sci.rs  sequence_file_containers.rs  sequence_layout.rs  sequence_structures.rs  ten_x.rs  yaml_defined_strategy.rs
src/reference/: fasta_reference.rs
src/sorters/: balanced_split_output.rs  known_list.rs  sort_streams.rs  sorter.rs
src/umis/: bronkerbosch.rs  sequence_clustering.rs  sequenceclustering.rs
src/utils/: base_utils.rs  custom_read_sort.rs  file_utils.rs  read_utils.rs
