[package]
name = "clique"
version = "0.1.0"
authors = ["aaronmck <aaronatwpi@gmail.com>"]
edition = "2021"

[dependencies]
bio = "*"
clap = { version = "3.1.6", features = ["derive"] }
lazy_static = "1.4.0"
csv = "1.1"
rand = "*"
needletail = "0.4"
rayon = "1.5.1"
fastq = "*"
seq_io = "*"
petgraph = "*"
flate2 = "1.0.23"
noodles-fastq = "*"
ndarray = "0.15.0"
suffix = "1.2"
num-traits = "*"
float-cmp = "*"
priority-queue = "*"

[profile.release]
lto = true

[build]
rustflags = "-C target-cpu=native"

