[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clique_lineage"
version = "0.0.1"
description = "A package for processing lineage recording data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mckennalab/clique"
"Bug Tracker" = "https://github.com/mckennalab/clique/issues"
