[package]
name = "clique"
version = "0.1.0"
authors = ["aaronmck <aaronatwpi@gmail.com>"]
edition = "2021"

[dependencies]
bio = "*"
clap = { version = "3.1.6", features = ["derive"] }
lazy_static = "1.4.0"
rand = "*"
needletail = "0.4"
rayon = "1.5.1"
fastq = "*"
seq_io = "*"
petgraph = "*"
flate2 = "1.0.23"
ndarray = "0.15.0"
suffix = {git = "https://github.com/aaronmck/suffix.git"}
num-traits = "*"
indicatif = "*"
tempfile = "3"
bgzip = "0.2.1"
log = "*"
serde = { version = "*", features = ["derive"] }
itertools = "*"
bincode = "*"
backtrace = "0.3"
typetag = "0.2"
nanoid = "0.4.0"
pretty_env_logger = "0.4"
chrono = "0.4"
pretty_trace = {git = "https://github.com/10XGenomics/rust-toolbox.git"}
serde_yaml = "0.9"
symspell = "0.4.3"
shrinkwraprs = "*"
nohash-hasher = "*"
shardio = "*"
anyhow = "1"
spoa = "*"
rustc-hash = "*"
counter = "*"
actix = "0.13"
sift4 = "*"
colored = "*"
vpsearch = "*"
libc = "0.2"
sigalign = "0.4.0"

phf = {version = "0.11", features = ["macros"] }
priority-queue = "1.3.1"
noodles-core = "0.14.0"
noodles-bam = "0.56.0"
noodles-sam = "0.53.0"
noodles-bgzf = "0.26.0"
noodles-util = { version = "0.37.0", features = ["alignment"] }
bstr = "*"
indexmap = "2.0.0"
triple_accel = "*"

rust-htslib = "*"
rust_starcode = { git = "https://github.com/aaronmck/rust-starcode.git"}


[profile.release]
lto = true
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
