[package]
name = "clique"
version = "0.1.0"
authors = ["aaronmck <aaronatwpi@gmail.com>"]

[dependencies]
bio = "*"
clap = { version = "3.1.6", features = ["derive"] }
lazy_static = "1.4.0"
rand = "*"
needletail = "0.4"
rayon = "1.5.1"
fastq = "*"
seq_io = "*"
petgraph = "*"
flate2 = "1.0.23"
ndarray = "0.15.0"
suffix = {git = "https://github.com/aaronmck/suffix.git"}
num-traits = "*"
indicatif = "*"
tempfile = "3"
bgzip = "0.2.1"
log = "*"
serde = { version = "*", features = ["derive"] }
itertools = "*"
backtrace = "0.3"
nanoid = "0.4.0"
pretty_env_logger = "0.4"
chrono = "0.4"
serde_yaml = "0.9"
symspell = "0.4.3"
nohash-hasher = "*"
shardio = "*"
anyhow = "1"
spoa = "*"
rustc-hash = "*"
counter = "*"
vpsearch = "2.0.1"
libc = "0.2"
sigalign = "0.4.1"
phf = {version = "0.11", features = ["macros"] }
noodles-core = "*"
noodles-bam = "*"
noodles-sam = "*"
noodles-util = { version = "*", features = ["alignment"] }
bstr = "*"
indexmap = "2.0.0"

rust-htslib = "*"
rust_star = { git = "https://github.com/mckennalab/ruststarcode.git"}

[build-dependencies]
bindgen = "0.60.1"
cmake = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
